--- a/math154/calculus1_functions.html
+++ b/math154/calculus1_functions.html
@@ -32,7 +32,7 @@
 <h2>Example 1 - Busses</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example 1</button>
   <div id="ex1" class="collapse">
-    <P>A bus rental company charges $100 pls $5 per rider. The maximum occupancy of the bus is 40 people.
+    <P>A bus rental company charges $100 plus $5 per rider. The maximum occupancy of the bus is 40 people.
       <ol>
         <li>Make a table with numbers of riders and cost to rent. (You don't need to include every number.)
         <li>Come up with an algebraic definition of the function describing the rental cost.
@@ -45,6 +45,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#def1">Definition</button>
   <div id="def1" class="collapse">
     <P><b>Definition</b>: A function is a rule for assigning to each member of a set, called the domain, one and only one member of another set, called the range.
+
   </div>
 
 
@@ -52,7 +53,8 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
   <div id="ex2" class="collapse">
     <P>In a previous class, Chris earned a B+, Elizabeth earned an A, and Michael earned a C.
-      Is this a function?
+      Is this a function?<br>
+      <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_4gcl4uvp&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_0ctacdd6" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </div>
 
 
@@ -192,7 +194,7 @@ def _(alpha=(alpha,(0.,3.)),beta=(beta,(0.,3.))):
      <li>\(f(g(x))\)
      <li>\(g(f(x))\)
      </ol>
-  <li>Let \(f(x) = 2x^4 + x^4 + 1, g(x) = \sqrt{x}\). Find \(f(g(x)) = (f \circ g) (x)\).
+  <li>Let \(f(x) = 2x4 + x4 + 1, g(x) = \sqrt{x}\). Find \(f(g(x)) = (f \circ g) (x)\).
   </ol>
 
 
