--- a/other/quests/quest5/start.html
+++ b/other/quests/quest5/start.html
@@ -1,1 +1,22 @@
+<html>
 
+<head>
+<title>Nix Ocean Life Birthday Quest</title>
+
+</head>
+
+<body>
+
+<h2>Nix Ocean Life Birthday Quest!</h2>
+
+<P>Your sea life dig'em ups are buried at the bottom of the ocean.
+<P>You need to solve the following puzzles to find them.
+<P>To begin click the start button below.<br>
+  <img src="./box.jpg"  width=500>
+<br><br>
+<form method="get" action="n1.html">
+    <button type="submit">Start!</button>
+</form>
+
+</body>
+</html>
