--- a/other/quests/quest5/end.html
+++ b/other/quests/quest5/end.html
@@ -17,7 +17,7 @@ document.getElementById('error').innerHTML='Try Again!';
 <img src="./box.jpg"  width=500>
 <br><br>
 <form method="get" action="start.html">
-    <button type="submit"> -->> NEXT -->> </button>
+    <button type="submit"> -->> Back to Start -->> </button>
 </form>
 </body>
 </html>
