--- a/other/quests/quest5/start.html
+++ b/other/quests/quest5/start.html
@@ -9,7 +9,8 @@
 
 <h2>Nix Ocean Life Birthday Quest!</h2>
 
-<P>Your sea life dig'em ups are buried at the bottom of the ocean.
+<h3>Oh No! Your sea life dig'em ups have escaped your present and are trying to get
+  back to the bottom of the ocean!</h3>
 <P>You need to solve the following puzzles to find them.
 <P>To begin click the start button below.<br>
   <img src="./box.jpg"  width=500>
