--- a/math250/week4.html
+++ b/math250/week4.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+    <body style="width: 1000px; padding-left: 1cm; font-size: 200%;" background="bg.jpg">
 
   <h1>Math 250 - Intro to Linear Algebra</h1>
 
@@ -44,9 +44,7 @@
                                0 & 1 & 1 & 10  \end{bmatrix} \hspace{1cm}
          C = \begin{bmatrix} 1 & 1 & 1 & 0 \\
                                0 & 1 & 0 & 0 \end{bmatrix} $$
-    <li> Write the augmented matrix for the system below and then reduce that to RREF. Interpret your solutions.
-      $$x - 7y + z = 3$$
-      $$2x - 14 y + 3z = 4$$
+
     </ol>
  </div>
 
@@ -104,9 +102,9 @@
 <div id="ex4" class="collapse">
 <img src="./kirchoff2.png" width=400><br>
   <P>The multiloop circuit shown above has two junctions and three branches carrying currents, \(I_1, I_2, I3\).
-    <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Voltage Law</a> says that the sum of the voltage drops around any loop must be zero.
-    The voltage drop across a resistor is given by <a href="https://en.wikipedia.org/wiki/Ohm%27s_law">Ohm's Law</a> (\(V = IR\)) where \(I\) is the current and \(R\) is the resistance.
-    <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Current Law</a> says that the sum of the currents at any junction must be zero (direction is important).
+    Kirchoff's Voltage Law says that the sum of the voltage drops around any loop must be zero.
+    The voltage drop across a resistor is given by Ohm's Law (\(V = IR\)) where \(I\) is the current and \(R\) is the resistance.
+    Kirchoff's Current Law says that the sum of the currents at any junction must be zero (direction is important).
     <ol type='1'>
       <li>Explain why the system below for the currents follows from Kirchoff's Laws.
         $$I_1 + I_3 - I_2 = 0$$
@@ -124,7 +122,7 @@
 <div id="ex5" class="collapse">
 
 <P> Consider the DE
-    $$ y''' - 2y'' - y' + 2 = 0$$
+    $$ y''' - 2y'' - y' + 2y = 0$$
   with general solution
   $$y(t) = c_1 e^{-t} + c_2 e^{t} + c_3 e^{2t}.$$
 
@@ -145,7 +143,7 @@
 <img src="./kirchoff.png" width=450><br>
 
 <P>The multiloop circuit shown above has four junctions, \(j_i\), and six branches carrying currents, \(I_i\).
-  <a href="https://en.wikipedia.org/wiki/Kirchhoff%27s_circuit_laws">Kirchoff's Current Law</a> says that the sum of the currents at each junction must be zero.
+  Kirchoff's Current Law says that the sum of the currents at each junction must be zero.
   <ol type='1'>
     <li>Write a system of equations for \(I_1, I_2, I_3, I_4, I_5, I_6\).
     <li>Write the system as an augmented matrix.
