--- a/math250/week5.html
+++ b/math250/week5.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width: 1000px;">
+  <body style="width: 1000px; padding-left: 1cm; font-size: 200%;" background="bg.jpg">
 
   <h1>Math 250 - Intro to Linear Algebra</h1>
 
@@ -95,10 +95,10 @@
 <h2>Example 3 - Turtle populations</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex3">Example 3</button>
 <div id="ex3" class="collapse">
-<a href="./Crouse_etal_1987_Ecology.pdf"><img src="./loggerhead_turtle.jpg" width=300></a><br>
+<a href="./Crouse_etal_1987_ecology.pdf"><img src="./loggerhead_turtle.jpg" width=300></a><br>
 
 One way to model a population is to consider the number of individuals in certain stages of development.
-In <a href="./Crouse_etal_1987_Ecology.pdf">Crouse et al.</a> they break up the loggerhead turtle population into seven distinct stages.
+In <a href="./Crouse_etal_1987_ecology.pdf">Crouse et al.</a> they break up the loggerhead turtle population into seven distinct stages.
 They are eggs & hatchlings (together), small juveniles, large juveniles, subadults, novice breeders, 1st year remigrants, and mature breeders.
 We can then keep track of the population in year \(n\) with the vector \(x_n = [x_1, x_2, ..., x_7]^T\) where \(x_1\) are eggs & hatchlings, \(x_2\) are small juveniles, up through \(x_7\) as the mature breeders.
 
@@ -226,7 +226,7 @@ $$a \cos B + b \cos A = c$$
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
 <div id="ex10" class="collapse">
 
-The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatstone bridge</a>. It is useful for determining an unknown resistance of an object.
+The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatsone bridge</a>. It is useful for determining an unknown resistance of an object.
 When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\) are known, while \(R_2\) is adjustable.
 \(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
 $$R_x  = \frac{R_2 R_3}{R_1}.$$
